--- a/Dockerfile.in
+++ b/Dockerfile.in
@@ -16,5 +16,5 @@ FROM {ARG_FROM}
 
 ADD bin/{ARG_OS}_{ARG_ARCH}/{ARG_BIN} /{ARG_BIN}
 
-USER nobody:nobody
+USER xiowang:xiowang
 ENTRYPOINT ["/{ARG_BIN}"]
